# directory-structure-py

./: README.md  pyproject.toml  sample.json  sample.tsv
.github/workflows/: pyinstaller-ubuntu.yml  pyinstaller-windows.yml  python-package.yml
directory_structure_py/: __init__.py  __main__.py  _version.py  constants.py  conversion.py  get_metadata.py  main.py  rocrate_models.py
directory_structure_py/config/: logging.json
directory_structure_py/libs/cli/: README.md  pyproject.toml
directory_structure_py/libs/cli/directory_structure_py_cli/: __init__.py  __main__.py  cli.py  main.py
directory_structure_py/libs/cli/for_portable/: directory_structure_py.sh  readme.txt
directory_structure_py/libs/core/: README.md  pyproject.toml
directory_structure_py/libs/core/directory_structure_py_core/: __init__.py  base_class.py  conversion.py  get_metadata.py  utils.py
directory_structure_py/libs/core/directory_structure_py_core/wip/: __init__.py  base_class.py  extractor.py
directory_structure_py/libs/directory_structure_py/: pyproject.toml
directory_structure_py/libs/directory_structure_py/directory_structure_py/: __init__.py
directory_structure_py/libs/extension/: README.md  pyproject.toml
directory_structure_py/libs/extension/directory_structure_py_extension/: __init__.py
directory_structure_py/libs/extension/directory_structure_py_extension/rocrate/: __init__.py  converter.py  models.py
directory_structure_py/src/: __init__.py  constants.py  conversion.py  get_metadata.py  main.py  rocrate_models.py
directory_structure_py/templates/: preview_template.html.j2
for_portable/: directory_structure_py.bat  readme.txt  readme_ja.txt
notebooks/: how_to_convert_metadata.ipynb  how_to_get_metadata.ipynb
output/sample/: directory_structure_metadata.json  directory_structure_metadata.tsv  directory_structure_metadata_tree.json  ro-crate-metadata.json  ro-crate-preview.html
sample/: readme.md
sample/data/: data_001.csv  data_002.csv
sample/hogehoge/data/: data_003.csv
scripts/: generate_sample_outputs.py
tests/: test_conversion.py  test_get_metadata.py  test_main.py  test_rocrate_models.py
