[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "directory-structure-py"
version = "0.2.5"
description = "Python function collecting the metadata of a directory and its contents"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Surpris", email = "take90-it09-easy27@outlook.jp" }]
dependencies = ["rocrate"]
requires-python = ">=3.12"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.12',
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
    'License :: OSI Approved :: Apache Software License'
]

[project.optional-dependencies]
dev = [
    "line_profiler",
    "pyinstaller",
    "pytest",
    "pylint",
    "autopep8",
    "flake8",
    "jupyter",
    "jupyterlab"
]

[project.scripts]
directory_structure_py = "directory_structure_py:main"

[project.urls]
Homepage = "https://github.com/Surpris/directory-structure-py"
Repository = "https://github.com/Surpris/directory-structure-py"
"Bug Tracker" = "https://github.com/Surpris/directory-structure-py/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["directory_structure_py"]

[tool.setuptools.data-files]
"directory_structure_py/docs" = ["directory_structure_py/docs/*"]
"directory_structure_py/config" = ["directory_structure_py/config/*"]
"directory_structure_py/templates" = ["directory_structure_py/templates/*"]
